# Innovative-Practices---Pay2Park

./: README.md
PAY2PARK/PAY2PARK/: CMakeLists.txt  PAY2PARK.sln  PAY2PARK.vcxproj  PAY2PARK.vcxproj.filters  SPLASH.cpp  SPLASH.h  SPLASH.resx  main_view.cpp  main_view.h  main_view.h~RF5760c6.TMP
PAY2PARK/PAY2PARK/Debug/: PAY2PARK.SPLASH.resources  PAY2PARK.exe.metagen  PAY2PARK.exe.recipe  PAY2PARK.vcxproj.FileListAbsolute.txt  PAY2PARK.vcxproj.GenerateResource.cache
PAY2PARK/PAY2PARK/Debug/PAY2PARK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PAY2PARK.lastbuildstate  PAY2PARK.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
